--- a/01-PixelArtGenerator/style.css
+++ b/01-PixelArtGenerator/style.css
@@ -1,1 +1,51 @@
- 
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
+
+* {
+  font-family: "Poppins", sans-serif;
+  margin: none;
+  padding: none;
+  box-sizing: border-box;
+}
+
+.main-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.title h1 {
+  text-align: center;
+  font-size: 2rem;
+  font-weight: 700;
+}
+
+.sliders-container {
+  display: flex;
+  justify-content: space-evenly;
+  margin-bottom: 1rem;
+}
+
+.sliders-container div {
+  background-color: #fafafa;
+  padding: 1rem;
+  border-radius: 0.5rem;
+}
+
+.grid-options {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.grid-options button {
+  border: 1px solid #aaa;
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+}
+
+.grid-options input {
+  display: block;
+  border: none;
+  outline: none;
+  padding: 0;
+  margin: 0;
+}
