--- a/01-PixelArtGenerator/style.css
+++ b/01-PixelArtGenerator/style.css
@@ -43,22 +43,34 @@
   border-radius: 0.5rem;
 }
 
+.grid-options div {
+  border: 1px solid #aaa;
+  width: 3rem;
+  height: 3rem;
+  border-radius: 2rem;
+  overflow: hidden;
+}
+
 .grid-options input {
+  transform: translate(-10%, -10%);
   display: block;
+  appearance: none;
   border: none;
   outline: none;
   padding: 0;
   margin: 0;
+  width: 4rem;
+  height: 4rem;
 }
 
 .gridCanvas {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   align-self: center;
 }
 
 .gridCanvas .grid-tile {
   width: 1rem;
   height: 1rem;
-  border: 1px solid #aaa;
+  border: 1px solid #ddd;
 }
