--- a/03-PasswordGenerator/style.css
+++ b/03-PasswordGenerator/style.css
@@ -40,6 +40,8 @@ body {
   border-right: 1px solid #c0c0c0;
   border-top-left-radius: 0.5rem;
   border-bottom-left-radius: 0.5rem;
+  font-size: 1rem;
+  text-align: center;
 }
 
 .generated-password button {
@@ -51,18 +53,30 @@ body {
   border-bottom-right-radius: 0.5rem;
 }
 
-.Password-strength {
+.password-strength {
   height: 0.5rem;
   background-color: rgb(13, 190, 13);
   margin: 1rem 4rem;
   border-radius: 0.2rem;
 }
 
+.password-length {
+  display: flex;
+  gap: 0.5rem;
+}
+
+.password-length label {
+  padding: 0 1rem;
+  font-size: 1.2rem;
+  width: 4rem;
+}
+
 #passLength {
+  margin-left: 1rem;
   width: 100%;
 }
 
-.Password-options {
+.password-options {
   display: grid;
   grid-template-columns: 1fr 6fr;
   margin: 1rem 0 2rem 0;
