--- a/06-TicTacToe/style.css
+++ b/06-TicTacToe/style.css
@@ -18,12 +18,13 @@ body {
 
 .title {
   padding-bottom: 1rem;
+  color: #333;
 }
 
 .main-container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  border: 4px solid black;
+  border: 4px solid #555;
   border-radius: 1rem;
   width: 356px;
   height: 356px;
@@ -35,8 +36,61 @@ body {
 .tile {
   width: 120px;
   height: 120px;
-  border: 4px solid black;
+  border: 4px solid #555;
   border-radius: 0.5rem;
   background-color: #fff;
-  outline: black solid 4px;
+  outline: #555 solid 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 6rem;
+  font-weight: bold;
+  color: #333;
+}
+
+.btn {
+  padding: 0.5rem;
+  margin: 2rem;
+  border: 3px solid #555;
+  background-color: rgb(241, 230, 215);
+  color: #333;
+  font-size: 1rem;
+  border-radius: 0.3rem;
+}
+
+.btnRestart {
+  width: 356px;
+  transition: background-color 300ms ease;
+}
+
+.btn:hover {
+  background-color: rgb(255, 247, 237);
+}
+
+.modal {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 5rem;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.6);
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+.winMessage {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-color: antiquewhite;
+  width: 400px;
+  height: 200px;
+  border-radius: 0.5rem;
+}
+
+.winMessage button {
 }
