--- a/07-CoinFlip/style.css
+++ b/07-CoinFlip/style.css
@@ -73,6 +73,9 @@ body {
   width: 170px;
   height: 170px;
   border-radius: 100px;
+  font-size: 3rem;
+  font-weight: bold;
+  color: #be8641;
   background: #ffb75e;
   background: -webkit-linear-gradient(to right, #ed8f03, #ffb75e);
   background: linear-gradient(to right, #ed8f03, #ffb75e);
