--- a/08-MultiStepForm/style.css
+++ b/08-MultiStepForm/style.css
@@ -21,14 +21,63 @@ body {
   transform: translate(-50%, -50%);
   width: 300px;
   height: 400px;
+  overflow: hidden;
+  border-radius: 0.5rem;
 }
 
 .wrapper-form {
   display: flex;
   width: 900px;
+  transition: all 200ms ease-in-out;
 }
 
 .screen {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   width: 300px;
   height: 400px;
+}
+
+.screen h2 {
+  color: #888;
+  padding: 3rem 0;
+}
+
+.screen input {
+  margin-bottom: 1.5rem;
+  border: none;
+  border-bottom: 1px solid #aaa;
+}
+
+::placeholder {
+  color: #888;
+}
+
+.screen label {
+  font-size: 0.9rem;
+  color: #888;
+}
+
+.screen .birthDate-wrapper {
+  display: flex;
+  gap: 1rem;
+}
+
+.btn-wrapper {
+  margin-top: 1rem;
+}
+
+.btn-wrapper button {
+  margin: 0 0.5rem;
+  color: #fff;
+  background-color: #1565c0;
+  width: 6rem;
+  height: 2rem;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  font-weight: bold;
+  border-radius: 2rem;
 }
