--- a/10-WeatherApp/style.css
+++ b/10-WeatherApp/style.css
@@ -5,4 +5,107 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Poppins", "sans-serif";
+  color: #555;
+}
+
+body {
+  position: relative;
+  background-color: cornflowerblue;
+  height: 100dvh;
+}
+
+.main-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #fff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 1rem;
+  width: 400px;
+  padding: 1rem;
+}
+
+.search-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.search-wrapper .fa-location-dot {
+  font-size: 1.8rem;
+}
+
+.search-wrapper input {
+  padding: 0 0.5rem;
+  border: none;
+  outline: none;
+  width: 16rem;
+  font-size: 1.5rem;
+}
+
+.search-wrapper button {
+  width: 3rem;
+  height: 3rem;
+  border-radius: 2rem;
+  border: none;
+  background-color: #def5ff;
+  font-size: 1.4rem;
+}
+
+.img-wrapper img {
+  width: 250px;
+  height: 250px;
+}
+
+.temperature-wrapper {
+  display: flex;
+  font-size: 2.5rem;
+  padding: 1rem 0 0 2rem;
+  height: 5.5rem;
+}
+
+.temperature-wrapper sup {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.temperature-info h2 {
+  font-weight: lighter;
+}
+
+.moreInfo-wrapper {
+  padding: 2rem 0 1rem 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.moreInfo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+}
+
+.moreInfo > div {
+  display: flex;
+  align-items: center;
+}
+
+.moreInfo h3 {
+  font-size: 1.4rem;
+}
+
+.moreInfo h4 {
+  font-weight: lighter;
+}
+
+.moreInfo > div i {
+  font-size: 2rem;
+  padding-right: 0.8rem;
 }
