--- a/11-MovieGuide/style.css
+++ b/11-MovieGuide/style.css
@@ -40,14 +40,18 @@ body {
 
 .main-container {
   background-color: var(--color-bg);
-  padding: 1.5rem;
+  padding: 2rem;
   border-radius: 1rem;
+  max-width: 600px;
+  width: 90dvw;
+  margin: 1rem;
 }
 
 .search-container {
-  flex-direction: row;
-  gap: 1rem;
-  padding-bottom: 2rem;
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  gap: 0.5rem;
+  margin-bottom: 2rem;
 }
 
 .search-container input {
@@ -56,22 +60,29 @@ body {
   border-radius: 0.5rem;
   font-size: 1.4rem;
   padding: 0.2rem 0.5rem;
+  max-width: 63dvw;
 }
 .search-container button {
   background-color: var(--color-accent);
-  flex-direction: row;
   color: #000;
   border: none;
   padding: 0.8rem;
   border-radius: 0.5rem;
+  cursor: pointer;
+}
+
+.movie-container {
+  height: 0;
+  overflow: hidden;
 }
 
 .movie-data {
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: 2fr 3fr;
 }
 
-.img-wrapper img {
-  width: 200px;
+.movie-data img {
+  max-width: 100%;
 }
 
 .main-container .data-wrapper {
@@ -94,7 +105,45 @@ body {
   gap: 1rem;
 }
 
+.genres {
+  width: 100%;
+  flex-direction: row;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  padding: 1rem;
+  gap: 1rem;
+}
+
+.genres > div {
+  border: 1px solid var(--color-light);
+  border-radius: 0.3rem;
+  padding: 0.1rem 0.3rem;
+}
+
 .movie-info h2 {
   padding-top: 1.5rem;
   font-size: 1.2rem;
+}
+
+.notFound {
+  height: 0;
+  overflow: hidden;
+  transition: height 300ms ease-in-out;
+}
+
+@media (max-width: 500px) {
+  body {
+    align-items: flex-start;
+  }
+
+  .movie-data {
+    grid-template-columns: 1fr;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .movie-data img {
+    max-width: 250px;
+    justify-self: center;
+  }
 }
