--- a/12-TypingApp/style.css
+++ b/12-TypingApp/style.css
@@ -1,1 +1,88 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", "sans-serif";
+}
+
+span {
+  font-weight: 700;
+}
+
+h3 {
+  font-weight: 400;
+}
+
+body {
+  height: 100dvh;
+  background-color: burlywood;
+}
+
+.main-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  padding: 2rem;
+  border-radius: 2rem;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
+.typing-info-1 {
+  text-align: right;
+  margin-bottom: 2rem;
+}
+
+.textBoxes {
+  width: 500px;
+  height: 140px;
+  border: 1px solid #ccc;
+  border-radius: 0.5rem;
+  margin: 2rem 0;
+  padding: 0.5rem;
+  font-size: 1.2rem;
+  line-height: 1.6;
+}
+
+.typingInput {
+  outline: none;
+}
+
+.btn-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  overflow: hidden;
+  height: 4rem;
+}
+
+.startBtn {
+  padding: 0.5rem 1.5rem;
+  border: none;
+  outline: none;
+  background-color: burlywood;
+  font-size: 1.3rem;
+  font-weight: 400;
+  border-radius: 0.3rem;
+}
+
+.result-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 0;
+  overflow: hidden;
+}
+
+.typing-info-2 {
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  margin: 1rem;
+}
