TypingApp styles and js

--- a/12-TypingApp/style.css
+++ b/12-TypingApp/style.css
@@ -39,8 +39,7 @@ body {
 }
 
 .textBoxes {
-  width: 500px;
-  height: 140px;
+  width: 100%;
   border: 1px solid #ccc;
   border-radius: 0.5rem;
   margin: 2rem 0;
