--- a/12-TypingApp/style.css
+++ b/12-TypingApp/style.css
@@ -7,10 +7,6 @@
   font-family: "Poppins", "sans-serif";
 }
 
-span {
-  font-weight: 700;
-}
-
 h3 {
   font-weight: 400;
 }
@@ -60,7 +56,7 @@ body {
   height: 4rem;
 }
 
-.startBtn {
+.btn {
   padding: 0.5rem 1.5rem;
   border: none;
   outline: none;
@@ -70,6 +66,10 @@ body {
   border-radius: 0.3rem;
 }
 
+.stopBtn {
+  display: none;
+}
+
 .result-wrapper {
   display: flex;
   flex-direction: column;
@@ -77,6 +77,7 @@ body {
   justify-content: center;
   height: 0;
   overflow: hidden;
+  transition: height 500ms ease-in-out;
 }
 
 .typing-info-2 {
@@ -84,4 +85,18 @@ body {
   display: flex;
   justify-content: space-evenly;
   margin: 1rem;
+}
+
+.typing-info span {
+  font-weight: 700;
+}
+
+.incorrect_char {
+  background-color: rgb(240, 108, 108);
+  color: #fff;
+}
+
+.correct_char {
+  background-color: rgb(175, 228, 96);
+  color: #000;
 }
