--- a/12-TypingApp/style.css
+++ b/12-TypingApp/style.css
@@ -17,6 +17,8 @@ body {
 }
 
 .main-container {
+  max-width: 600px;
+  width: 90%;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -81,10 +83,18 @@ body {
 }
 
 .typing-info-2 {
+  margin-top: 1rem;
   width: 100%;
-  display: flex;
-  justify-content: space-evenly;
-  margin: 1rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 5%;
+}
+
+.typing-info-2 div {
+  text-align: center;
+  background-color: #f3f3f3;
+  padding: 1rem;
+  border-radius: 1rem;
 }
 
 .typing-info span {
