--- a/13-TranslatorApp/style.css
+++ b/13-TranslatorApp/style.css
@@ -1,20 +1,66 @@
-.container {
-  margin: 20px;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", "sans-serif";
 }
 
-textarea {
+body {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(72, 119, 206);
+  margin-top: 1rem;
+}
+
+.main-container {
+  padding: 1rem;
+  background-color: #fff;
+  border-radius: 0.3rem;
+  box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset,
+    rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+}
+
+.main-container > div:first-child {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.main-container > div:nth-child(2) {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.textArea {
+  font-family: "Poppins", "sans-serif";
+  font-size: 1rem;
   width: 100%;
-  height: 100px;
-  margin-bottom: 10px;
-}
-
-button {
-  padding: 10px;
-  cursor: pointer;
-}
-
-#outputText {
-  margin-top: 10px;
+  height: 100%;
+  min-height: 300px;
+  resize: none;
   border: 1px solid #ccc;
-  padding: 10px;
+  padding: 0.5rem;
+}
+
+select {
+  text-align: center;
+  margin: 1rem 0;
+  border: none;
+  background-color: transparent;
+  padding: 0.2rem;
+  font-size: 1rem;
+}
+
+#translateBtn {
+  background-color: rgb(72, 119, 206);
+  color: #fff;
+  width: 100%;
+  border: none;
+  font-size: 1.2rem;
+  padding: 0.5rem;
+  cursor: pointer;
 }
