--- a/13-TranslatorApp/style.css
+++ b/13-TranslatorApp/style.css
@@ -17,10 +17,11 @@ body {
 }
 
 .main-container {
-  min-width: 600px;
+  max-width: 600px;
+  min-width: 400px;
   padding: 1rem;
   background-color: #fff;
-  border-radius: 0.3rem;
+  border-radius: 0.5rem;
   box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset,
     rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
     rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
@@ -44,6 +45,7 @@ body {
   border: none;
   background-color: transparent;
   padding: 0.5rem;
+  outline: none;
 }
 
 .text-wrapper div {
@@ -99,4 +101,19 @@ select {
   padding: 0.5rem;
   cursor: pointer;
   border-radius: 0.5rem;
+}
+
+.toast {
+  position: absolute;
+  top: -3rem;
+  left: 50%;
+  transform: translateX(-50%);
+  text-align: center;
+  font-size: 1.1rem;
+  padding: 0.2rem 2rem;
+  height: 2.5rem;
+  border: 3px solid #fff;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  border-radius: 0.5rem;
+  transition: top 100ms ease-in;
 }
