--- a/15-TodoListApp/style.css
+++ b/15-TodoListApp/style.css
@@ -5,4 +5,60 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Poppins", "sans-serif";
+  list-style: none;
+}
+
+body {
+  background-color: #1a2336;
+}
+
+.main-container {
+  background-color: #fff;
+  position: absolute;
+  top: 3rem;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 1rem;
+  border-radius: 0.5rem;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+}
+
+nav button {
+  font-size: 0.8rem;
+  border: none;
+  background-color: transparent;
+}
+
+#todos {
+  display: grid;
+  grid-auto-flow: column;
+  grid-auto-columns: 100%;
+  overflow-x: hidden;
+  width: 100%;
+}
+
+#todos li {
+  font-size: 0.7rem;
+  display: flex;
+  gap: 0.2rem;
+}
+
+#todos input[type="checkbox"] {
+  width: 0.6rem;
+}
+
+#todoAll {
+  display: block;
+}
+
+#todoPending {
+  display: block;
+}
+
+#todoCompleted {
+  display: block;
 }
