--- a/15-TodoListApp/style.css
+++ b/15-TodoListApp/style.css
@@ -60,9 +60,17 @@ nav {
 
 nav button {
   font-size: 0.8rem;
-  border: none;
-  padding: 0.8rem 0.3rem;
+  border: 1px solid transparent;
+  border-radius: 0.3rem;
+  margin: 0.3rem 0;
+  padding: 0.5rem 0.3rem;
   background-color: transparent;
+  transition: all 300ms ease-in-out;
+}
+
+nav button:focus {
+  border: 1px solid rgba(26, 35, 54, 0.5);
+  background-color: rgba(255, 244, 225, 0.3);
 }
 
 .todo {
