--- a/15-TodoListApp/style.css
+++ b/15-TodoListApp/style.css
@@ -92,6 +92,19 @@ nav button:focus {
   justify-content: flex-start;
 }
 
+.todo p {
+  font-size: 1.1rem;
+}
+
+.todo input[type="checkbox"]:checked + p {
+  text-decoration: line-through;
+}
+
+.todo input[type="checkbox"] {
+  width: 1rem;
+  height: 1rem;
+}
+
 .todo div {
   position: relative;
 }
