--- a/15-TodoListApp/style.css
+++ b/15-TodoListApp/style.css
@@ -68,7 +68,7 @@ nav button {
   transition: all 300ms ease-in-out;
 }
 
-nav button:active {
+.activeFilter {
   border: 1px solid rgba(26, 35, 54, 0.5);
   background-color: rgba(255, 244, 225, 0.3);
 }
