--- a/17-SnakeGameApp/style.css
+++ b/17-SnakeGameApp/style.css
@@ -10,32 +10,50 @@ body {
 
 .main-container {
   position: absolute;
-  top: 2rem;
+  top: 1rem;
   left: 50%;
   transform: translateX(-50%);
+  border-radius: 1rem;
+  overflow: hidden;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 .top-bar {
   display: flex;
   justify-content: space-between;
+  background-color: #293446;
 }
 
-.tile {
-  width: 1rem;
-  height: 1rem;
-  border: 1px solid black;
-}
-
-.row {
-  display: flex;
+.tiles-wrapper {
+  width: calc(90vmin - 2rem);
+  height: calc(90vmin - 2rem);
+  display: grid;
+  grid-template-columns: repeat(21, 1fr);
+  grid-template-rows: repeat(21, 1fr);
+  background-color: #212838;
 }
 
 .bottom-bar {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
+  gap: 2px;
+  background-color: #212838;
+}
+.top-bar,
+.bottom-bar button {
+  background-color: #293446;
+  color: #fff;
+  font-size: 1.2rem;
+  padding: 1rem 2rem;
 }
 
 .bottom-bar button {
-  font-size: 1.2rem;
-  padding: 0.3rem 0;
+  padding: 1rem 0;
+  border: none;
+}
+
+.bottom-bar button:hover {
+  background-color: #384355;
 }
