--- a/02-TextEditor/style.css
+++ b/02-TextEditor/style.css
@@ -7,8 +7,6 @@
   font-family: "Poppins", sans-serif;
 }
 body {
-  background-color: #eee;
-
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -23,16 +21,23 @@ body {
   margin-top: 0.2rem;
   display: flex;
   flex-wrap: wrap;
-  gap: 0.2rem;
+  gap: 0.4rem;
 }
 
 button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 2rem;
   height: 2rem;
-  padding: 5px;
-  color: black;
   background-color: white;
+  border: none;
   border-radius: 0.2rem;
+  font-size: 1rem;
+}
+
+button:hover {
+  border: 2px solid #ccc;
 }
 
 .text-editor {
@@ -41,10 +46,5 @@ button {
   min-height: calc(100dvh - 6rem);
   border: 1px solid #ccc;
   border-radius: 0.4rem;
-  background-color: #fff;
   cursor: text;
-}
-
-.bold {
-  font-weight: bold;
 }
