--- a/18-BudgetApp/style.css
+++ b/18-BudgetApp/style.css
@@ -6,6 +6,9 @@
   font-weight: 400;
   color: #333;
 }
+body {
+  background-color: #f0f0f0;
+}
 
 h2 {
   font-size: 1.2rem;
@@ -15,8 +18,14 @@ h3 {
   font-size: 1rem;
 }
 
-body {
-  background-color: #f0f0f0;
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
 }
 
 .main-container {
@@ -39,7 +48,6 @@ body {
   padding: 0.8rem;
   border-radius: 0.5rem;
 }
-
 .top-box input {
   border: 1px solid #ccc;
   border-radius: 0.2rem;
@@ -81,19 +89,55 @@ body {
   padding: 1rem;
 }
 
+.bottom-box h2 {
+  margin-bottom: 1rem;
+}
+
 .expenses {
   display: grid;
   grid-template-columns: 1fr;
   gap: 0.6rem;
 }
 
-li {
+.expenses > li {
   display: grid;
   grid-template-columns: 5fr 1fr 2rem 2rem;
   border-left: 4px solid #577ef3;
   padding: 0.4rem 0 0.4rem 0.6rem;
+  position: relative;
 }
 
-i {
+.expenses > li > i {
   text-align: center;
+}
+
+.expenses > li > div {
+  position: absolute;
+  background-color: #577ef3;
+  top: 0;
+  left: -4px;
+  right: 0;
+  color: #fff;
+  display: grid;
+  grid-template-columns: 4fr 6rem 3rem;
+  border-radius: 0.2rem;
+  gap: 0.3rem;
+  padding: 0;
+  height: 0;
+  transition: all 300ms ease-out;
+  overflow: hidden;
+}
+
+.expenses > li > div > input {
+  border: none;
+  padding-left: 0.3rem;
+  border-radius: 0.2rem;
+  font-size: 1rem;
+  outline: none;
+}
+
+.expenses > li > div > button {
+  background-color: #fff;
+  border: none;
+  border-radius: 0.2rem;
 }
