--- a/18-BudgetApp/style.css
+++ b/18-BudgetApp/style.css
@@ -77,6 +77,7 @@ input[type="number"] {
 
 .mid-box * {
   color: #fff;
+  transition: all 300ms ease-in-out;
 }
 
 .mid-box > div > h3:first-child {
@@ -140,4 +141,12 @@ input[type="number"] {
   background-color: #fff;
   border: none;
   border-radius: 0.2rem;
+}
+
+.negative {
+  color: #000;
+  font-weight: 700;
+  font-size: 1.2rem;
+  border-radius: 0.3rem;
+  text-shadow: 1px 1px 1rem #fff, 0 0 1rem #fff, 0 0 0.2rem #fff;
 }
